--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ lerna-debug.log*
 */node_modules
 /dist
 /node_modules
-.env
+# .env
 node_modules
 dist
 dist-ssr
@@ -28,6 +28,6 @@ dist-ssr
 *.sw?
 
 # Ignore environment files
-.env
-.env.local
-.env.production
+# .env
+# .env.local
+# .env.production
